fix: fix the function of follow button in user profile page
